--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,1 +1,162 @@
 @use "mixin" as *;
+
+.footer {
+    background-color: #0e0e0e;
+    @include adaptiv-value("padding-top", 90, 38, 1);
+    @include adaptiv-value("padding-bottom", 28, 41, 1);
+    &__container {
+    }
+
+    &__body {
+    }
+
+    &__row-01 {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        gap: 32px;
+
+        @media (max-width: 1200px) {
+            gap: 16px;
+        }
+
+        @media (max-width: 992px) {
+            grid-template-columns: repeat(2, 1fr);
+            row-gap: 36px;
+            column-gap: 25px;
+        }
+    }
+
+    &__row-02 {
+    }
+
+    &__col-01 {
+        min-width: 250px;
+
+        @media (max-width: 575px) {
+            min-width: 100%;
+            grid-column-start: span 2;
+            grid-row-start: 1;
+        }
+    }
+
+    &__col-02 {
+        @media (max-width: 575px) {
+            grid-column-start: 1;
+            grid-row-start: 2;
+        }
+    }
+
+    &__col-03 {
+        @media (max-width: 575px) {
+            grid-column-start: 2;
+            grid-row-start: 2;
+        }
+    }
+
+    &__col-04 {
+        @media (max-width: 575px) {
+            grid-column-start: 1;
+            grid-row-start: 3;
+        }
+    }
+
+    &__col-05 {
+        @media (max-width: 575px) {
+            grid-column-start: 2;
+            grid-row-start: 3;
+        }
+    }
+
+    &__col-06 {
+        @media (max-width: 575px) {
+            grid-column-start: span 2;
+            grid-row-start: 4;
+        }
+    }
+
+    &__title {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: normal;
+        color: #134cb2;
+        text-transform: uppercase;
+        @include adaptiv-value("margin-bottom", 16, 10, 1);
+    }
+
+    &__logo {
+        font-size: 24px;
+        line-height: normal;
+        font-weight: 600;
+        color: #f4f4f4;
+    }
+
+    &__text {
+        max-width: 250px;
+        margin: 20px 0 0 0;
+        font-size: 16px;
+        line-height: normal;
+        color: #f4f4f4;
+    }
+
+    &__socials {
+        margin: 30px 0 0 0;
+        display: flex;
+        align-items: center;
+        gap: 16px;
+    }
+
+    &__social {
+    }
+
+    &__social-link {
+    }
+
+    &__list {
+        display: flex;
+        flex-direction: column;
+        @include adaptiv-value("row-gap", 16, 10, 1);
+    }
+
+    &__item {
+    }
+
+    &__link {
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 130%;
+        color: #e5e7e7;
+        transition: all 0.3s ease 0s;
+
+        &:hover {
+            color: #134cb2;
+        }
+
+        span {
+            display: flex;
+            align-items: center;
+            gap: 11px;
+        }
+    }
+
+    &__copy {
+        @include adaptiv-value("margin-top", 73, 31, 1);
+        @include adaptiv-value("padding-top", 28, 24, 1);
+        border-top: 1px solid #646464;
+        text-align: center;
+        @include adaptiv-value('font-size', 16, 14, 1);
+        line-height: 130%;
+        line-height: normal;
+        color: #636363;
+    }
+
+    &__link-policy {
+        @include adaptiv-value('font-size', 16, 14, 1);
+        line-height: normal;
+        color: #636363;
+        transition: all 0.3s ease 0s;
+
+        &:hover {
+            color: #134cb2;
+        }
+    }
+}
