--- a/src/styles/solutions.scss
+++ b/src/styles/solutions.scss
@@ -4,8 +4,155 @@ body {
   background: #f1f1f1;
 }
 
+.consulting-hero {
+  background-color: #f1f1f1;
+  @include adaptiv-value("padding-top", 150, 115, 1);
+  padding-bottom: 60px;
+  &__container {
+  }
+
+  .img-01 {
+    margin-top: rem(70);
+  }
+
+  &__body {
+    position: relative;
+  }
+
+  &__title {
+    @include adaptiv-value("font-size", 72, 30, 1);
+    line-height: 130%;
+    color: #0e0e0e;
+    text-transform: uppercase;
+
+    span {
+      font-weight: 900;
+    }
+  }
+
+  .bottom {
+    display: flex;
+    align-items: flex-end;
+    gap: rem(16);
+    @media (max-width: rem(992)) {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: rem(20);
+    }
+    &.marketing {
+      align-items: center;
+      margin-top: rem(20);
+      svg {
+        max-width: rem(350);
+        margin: 0;
+      }
+      p {
+        font-size: rem(20);
+      }
+    }
+    h2 {
+      @include adaptiv-value("font-size", 72, 30, 1);
+      line-height: 1;
+      color: #0e0e0e;
+      text-transform: uppercase;
+      font-weight: 900;
+      margin-bottom: -5px;
+    }
+    svg {
+      max-width: rem(120);
+      margin-top: -10px;
+      display: block;
+      @media (max-width: 1299px) {
+        display: none;
+      }
+    }
+    p {
+      font-size: 22px;
+      line-height: 1.2;
+      font-weight: 300;
+      @media (max-width: 1299px) {
+        font-size: rem(18);
+      }
+    }
+  }
+
+  &__text {
+    font-size: rem(20);
+    line-height: 130%;
+    font-weight: 300;
+
+    @media (max-width: 1299px) {
+      position: static;
+      margin: 20px 0 0 0;
+      br {
+        display: none;
+      }
+    }
+  }
+
+  &__link {
+    margin: 40px 0 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    gap: 14px;
+    border-radius: 100px;
+    background-color: #0e0e0e;
+    padding: 12px 20px;
+    font-size: 20px;
+    line-height: normal;
+    color: #ffffff;
+
+    svg {
+      circle {
+        transition: all 0.3s ease 0s;
+      }
+    }
+
+    &:hover {
+      background-color: #134cb2;
+      svg {
+        circle {
+          fill: #000000;
+        }
+      }
+    }
+  }
+}
+
+.consulting-second {
+  .img-01 {
+    margin-top: rem(70);
+    display: block;
+    @media (max-width: rem(992)) {
+      display: none;
+    }
+  }
+  .img-02 {
+    display: none;
+    @media (max-width: rem(992)) {
+      display: block;
+    }
+  }
+  &__body {
+    margin-top: rem(80);
+    color: #0e0e0e;
+    font-size: rem(20);
+    font-weight: 300;
+    line-height: 1.2;
+    text-align: left;
+    span {
+      color: #134cb2;
+    }
+  }
+}
+
 .products {
   margin: rem(180) 0;
+  @media (max-width: rem(992)) {
+    margin: rem(100) 0;
+  }
   h2 {
     font-size: rem(48);
     font-weight: 500;
@@ -175,6 +322,32 @@ body {
 
 .packages-wrap {
   margin: rem(180) 0;
+  @media (max-width: rem(992)) {
+    margin: rem(100) 0;
+  }
+  h2 {
+    font-size: rem(48);
+    font-weight: 500;
+    line-height: 1.2;
+    text-align: left;
+    margin: 0 0 rem(40) 0;
+    @media (max-width: rem(992)) {
+      font-size: rem(30);
+      margin: 0 0 rem(30) 0;
+    }
+  }
+  p {
+    color: #0e0e0e;
+    font-size: rem(20);
+    font-weight: 300;
+    line-height: 1.2;
+    text-align: left;
+    margin: 0 0 rem(80) 0;
+    @media (max-width: rem(992)) {
+      font-size: rem(16);
+      margin: 0 0 rem(40) 0;
+    }
+  }
   &__body {
     .swiper {
       display: none;
@@ -250,6 +423,9 @@ body {
           ul {
             li {
               color: #fff;
+              &:before {
+                background: #fff;
+              }
             }
           }
         }
@@ -297,7 +473,7 @@ body {
         }
         ul {
           margin: 0;
-          padding: 0 0 0 rem(24);
+          padding: 0;
           li {
             color: #0e0e0e;
             font-size: rem(18);
@@ -305,6 +481,19 @@ body {
             line-height: 1.2;
             text-align: left;
             margin: 0 0 rem(16) 0;
+            padding: 0 0 0 rem(20);
+            position: relative;
+            &:before {
+              content: "";
+              display: block;
+              width: 7px;
+              height: 7px;
+              border-radius: 50%;
+              left: 0;
+              background: #134cb2;
+              top: 7px;
+              position: absolute;
+            }
             &:last-child {
               margin: 0;
             }
@@ -347,6 +536,209 @@ body {
           line-height: 1.2;
           text-align: left;
           width: auto;
+        }
+      }
+    }
+  }
+}
+
+.pricelist {
+  margin: rem(90) 0 rem(180) 0;
+  @media (max-width: rem(992)) {
+    margin: rem(90) 0 rem(100) 0;
+  }
+  &__body {
+    display: flex;
+    gap: rem(110);
+    align-items: center;
+    @media (max-width: rem(992)) {
+      flex-direction: column-reverse;
+      gap: rem(50);
+    }
+    img {
+      width: calc(50% - 55px);
+      @media (max-width: rem(992)) {
+        width: 100%;
+      }
+    }
+    > div {
+      width: calc(50% - 55px);
+      @media (max-width: rem(992)) {
+        width: 100%;
+      }
+      h2 {
+        font-size: rem(48);
+        font-weight: 500;
+        line-height: 1.2;
+        text-align: left;
+        margin: 0 0 rem(40) 0;
+        @media (max-width: rem(992)) {
+          font-size: rem(30);
+          margin: 0 0 rem(30) 0;
+        }
+      }
+      p {
+        color: #0e0e0e;
+        font-size: rem(20);
+        font-weight: 300;
+        line-height: 1.2;
+        text-align: left;
+        margin: 0 0 rem(90) 0;
+        @media (max-width: rem(992)) {
+          font-size: rem(16);
+          margin: 0 0 rem(40) 0;
+        }
+      }
+      a {
+        background-color: #0e0e0e;
+        border: 1px solid #0e0e0e;
+        height: rem(50);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: rem(25);
+        color: #fff;
+        font-size: rem(20);
+        font-weight: 500;
+        line-height: 1.2;
+        text-align: center;
+        padding: 0 rem(35);
+        width: fit-content;
+      }
+    }
+  }
+}
+
+.consulting-why {
+  background: #ffffff;
+  padding: rem(90) 0;
+  .top {
+    align-items: flex-end;
+    display: flex;
+    gap: rem(20);
+    margin: 0 0 rem(40) 0;
+    @media (max-width: rem(992)) {
+      margin: 0 0 rem(30) 0;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    svg {
+      max-width: rem(300);
+      @media (max-width: rem(992)) {
+        display: none;
+      }
+    }
+    h2 {
+      line-height: 1;
+      margin: 0;
+    }
+    p {
+      margin: 0;
+    }
+  }
+  h2 {
+    font-size: rem(48);
+    font-weight: 500;
+    line-height: 1.2;
+    text-align: left;
+    margin: 0 0 rem(40) 0;
+    @media (max-width: rem(992)) {
+      font-size: rem(30);
+      margin: 0 0 rem(30) 0;
+    }
+  }
+  p {
+    color: #0e0e0e;
+    font-size: rem(20);
+    font-weight: 300;
+    line-height: 1.2;
+    text-align: left;
+    margin: 0 0 rem(90) 0;
+    @media (max-width: rem(992)) {
+      font-size: rem(16);
+      margin: 0 0 rem(40) 0;
+    }
+  }
+  a {
+    background-color: #0e0e0e;
+    border: 1px solid #0e0e0e;
+    height: rem(50);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: rem(25);
+    color: #fff;
+    font-size: rem(20);
+    font-weight: 500;
+    line-height: 1.2;
+    text-align: center;
+    padding: 0 rem(35);
+    width: fit-content;
+    margin: 0 auto;
+  }
+
+  .swiper {
+    margin-bottom: rem(80);
+    @media (max-width: rem(992)) {
+      margin-bottom: rem(50);
+    }
+    .swiper-slide {
+      height: auto;
+      .item {
+        height: 100%;
+        width: 100%;
+        background: #f1f1f1;
+        padding: rem(20);
+        border-radius: rem(15);
+        > span {
+          display: flex;
+          justify-content: center;
+          color: #134cb2;
+          font-size: rem(28);
+          font-weight: 700;
+          line-height: 1.2;
+          text-align: center;
+        }
+        h3 {
+          margin: rem(10) 0;
+          font-size: rem(18);
+          font-weight: 500;
+          line-height: 1.2;
+          text-align: center;
+          color: #0e0e0e;
+        }
+        p {
+          margin: 0;
+          font-size: rem(16);
+          text-align: center;
+        }
+      }
+    }
+    .swiper-pagination {
+      position: relative;
+      top: unset !important;
+      left: unset !important;
+      bottom: unset !important;
+      margin-top: rem(30);
+      display: flex;
+      justify-content: center;
+      gap: rem(4);
+      opacity: 1;
+      display: none;
+      @media (max-width: rem(992)) {
+        display: flex;
+      }
+      .swiper-pagination-bullet {
+        background: #082860;
+        width: rem(8);
+        height: rem(2);
+        display: block;
+        transition: all 0.5s;
+        opacity: 1;
+        border-radius: 0;
+        &.swiper-pagination-bullet-active {
+          width: rem(25);
+          background: #082860;
         }
       }
     }
