--- a/src/styles/home/home.scss
+++ b/src/styles/home/home.scss
@@ -107,3 +107,122 @@
         }
     }
 }
+
+.home-items { 
+    @include adaptiv-value('padding-top', 90, 50, 1);
+    @include adaptiv-value('padding-bottom', 90, 50, 1);
+    &__container { 
+
+    }
+
+    &__body { 
+
+    }
+
+    &__items { 
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+        @include adaptiv-value('gap', 60, 0, 1);
+        align-items: stretch;
+
+        @media(max-width: 992px) { 
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 25px;
+        }
+    }
+
+    &__item { 
+        transition: all 0.3s ease 0s;
+        background-color: #F1F1F1;
+        padding: 50px;
+        @media(max-width: 992px) { 
+            padding: 30px 25px;
+        }
+        &._last { 
+            background-color: transparent;
+            background-image: url('/images/home/home-img-03.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+
+            @media(max-width: 767px) { 
+                background-image: url('/images/home/home-img-04.png');
+                min-height: 450px;
+            }
+        }
+
+        &:hover { 
+            background-color: #134CB2;
+
+            .home-items__title,
+            .home-items__label,
+            .home-items__text { 
+                color: #fff;
+            }
+        }
+    }
+    
+    &__wrapper { 
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
+
+    &__title { 
+        @include adaptiv-value('font-size', 48, 30, 1);
+        line-height: normal;
+        color: #0E0E0E;
+        @include adaptiv-value('margin-bottom', 34, 20, 1);
+        transition: all 0.3s ease 0s;
+    }
+
+    &__label { 
+        @include adaptiv-value('font-size', 20, 18, 1);
+        line-height: normal;
+        color: #134CB2;
+        font-style: italic;
+        @include adaptiv-value('margin-bottom', 20, 15, 1);
+        transition: all 0.3s ease 0s;
+    }
+
+    &__text { 
+        margin: 0 0 40px 0;
+        font-size: 16px;
+        line-height: normal;
+        color: #0E0E0E;
+        transition: all 0.3s ease 0s;
+    }
+
+    &__link { 
+        margin: auto 0 0 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: fit-content;
+        padding-top: 16px;
+        padding-right: 35px;
+        padding-bottom: 16px;
+        padding-left: 35px;
+        border-radius: 100px;
+        color: #fff;
+        background-color: #0E0E0E;
+        transition: all 0.3s ease 0s;
+        position: relative;
+
+        svg { 
+            opacity: 0;
+            position: absolute;
+            top: 50%;
+            right: 35px;
+            transform: translate(0, -50%);
+            transition: all 0.3s ease 0s;
+        }
+
+
+        &:hover { 
+            padding-right: 78px;
+            svg { 
+                opacity: 1;
+            }
+        }
+    }
+}
