--- a/src/styles/home/home.scss
+++ b/src/styles/home/home.scss
@@ -317,7 +317,7 @@
         grid-template-columns: repeat(auto-fit, minmax(195px, 1fr));
         gap: 20px;
         align-items: stretch;
-        @media(max-width: 992px) { 
+        @media (max-width: 992px) {
             padding: 0 16px;
         }
     }
@@ -343,21 +343,232 @@
         .label {
             margin: 15px 0 16px 0;
             text-align: center;
-            color: #0E0E0E;
+            color: #0e0e0e;
             font-weight: 500;
             font-size: 18px;
             line-height: normal;
         }
 
-        .text { 
+        .text {
             font-size: 16px;
             line-height: normal;
             text-align: center;
             font-weight: 300;
 
-            @media(max-width: 992px) { 
+            @media (max-width: 992px) {
                 padding: 0 16px;
             }
         }
+    }
+}
+
+.home-services {
+    @include adaptiv-value("padding-top", 180, 100, 1);
+    @include adaptiv-value("padding-bottom", 100, 80, 1);
+    &__container {
+    }
+
+    &__body {
+    }
+
+    &__title {
+        @include adaptiv-value("font-size", 48, 30, 1);
+        line-height: normal;
+        color: #0e0e0e;
+        font-weight: 500;
+    }
+
+    &__tabs {
+        @include adaptiv-value("margin-top", 60, 30, 1);
+
+        .tabs-home {
+            display: flex;
+            @include adaptiv-value("column-gap", 128, 0, 1);
+
+            @media (max-width: 992px) {
+                display: block;
+                gap: 0;
+            }
+
+            &__nav {
+                min-width: 300px;
+            }
+
+            &__button {
+                padding: 16px 33px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                font-size: 22px;
+                line-height: normal;
+                font-weight: 400;
+                color: #9f9f9f;
+                width: 100%;
+                border-bottom: 1px solid #9f9f9f;
+                transition: all 0.3s ease 0s;
+
+                &.active {
+                    font-weight: 600;
+                    color: #134cb2;
+                    border-color: #0e0e0e;
+                }
+            }
+
+            &__content {
+            }
+
+            &__bottom {
+                @include adaptiv-value("margin-top", 80, 40, 1);
+                display: flex;
+                align-items: center;
+                gap: 35px;
+            }
+
+            &__arrow {
+                display: flex;
+                @media (max-width: 767px) {
+                    display: none;
+                }
+            }
+
+            &__link {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: fit-content;
+                padding-top: 16px;
+                padding-right: 35px;
+                padding-bottom: 16px;
+                padding-left: 35px;
+                border-radius: 100px;
+                color: #fff;
+                background-color: #0e0e0e;
+                transition: all 0.3s ease 0s;
+                position: relative;
+
+                svg {
+                    opacity: 0;
+                    position: absolute;
+                    top: 50%;
+                    right: 35px;
+                    transform: translate(0, -50%);
+                    transition: all 0.3s ease 0s;
+
+                    circle {
+                        fill: #0e0e0e;
+                        path {
+                            fill: #fff;
+                        }
+                    }
+                }
+
+                &:hover {
+                    padding-right: 78px;
+                    background-color: #134cb2;
+                    svg {
+                        opacity: 1;
+                    }
+                }
+            }
+
+            &__wrapper {
+                .text {
+                    @include adaptiv-value('font-size', 20, 16, 1);
+                    line-height: normal;
+                    font-weight: 300;
+                    color: #0e0e0e;
+                    @include adaptiv-value("margin-bottom", 65, 40, 1);
+                }
+
+                &.tab2 {
+                    @media (max-width: 992px) {
+                        margin: 60px 0 0 0;
+                    }
+                }
+            }
+
+            &__label {
+                @media (min-width: 992px) {
+                    display: none;
+                }
+                font-size: 22px;
+                line-height: normal;
+                font-weight: 600;
+                color: #134cb2;
+                padding: 16px 32px;
+                text-align: center;
+                border-bottom: 1px solid #0e0e0e;
+                margin: 0 0 40px 0;
+            }
+        }
+    }
+}
+
+.home-services-slider {
+    width: 100%;
+    .swiper-slide {
+    }
+
+    .swiper-pagination {
+        position: relative;
+        top: unset !important;
+        left: unset !important;
+        bottom: unset !important;
+        margin-top: rem(30);
+        display: flex;
+        justify-content: center;
+        gap: rem(5);
+        opacity: 1;
+        .swiper-pagination-bullet {
+            background: #082860;
+            width: rem(13);
+            height: rem(2);
+            display: block;
+            transition: all 0.5s;
+            opacity: 1;
+            border-radius: 0;
+            &.swiper-pagination-bullet-active {
+                width: rem(34);
+                background: #082860;
+            }
+        }
+    }
+
+    @media (min-width: 992px) {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        @include adaptiv-value("column-gap", 40, 0, 1);
+        @include adaptiv-value("row-gap", 40, 0, 1);
+    }
+    &__item {
+    }
+
+    &__wrapper {
+    }
+
+    &__top {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    &__number {
+        font-weight: 600;
+        color: #134cb2;
+        @include adaptiv-value('font-size', 24, 18, 1);
+        line-height: normal;
+    }
+
+    &__title {
+        @include adaptiv-value('font-size', 24, 18, 1);
+        line-height: normal;
+        color: #0e0e0e;
+        font-weight: 400;
+    }
+
+    &__text {
+        margin: 15px 0 0 0;
+        font-weight: 300;
     }
 }
