--- a/src/styles/account.scss
+++ b/src/styles/account.scss
@@ -32,6 +32,7 @@
 
       @media (max-width: rem(992)) {
         width: 100%;
+        flex-direction: column;
       }
       li {
         cursor: pointer;
@@ -80,7 +81,7 @@
           text-align: left;
           margin: 0 0 rem(30) 0;
           @media (max-width: rem(992)) {
-            font-size: rem(244);
+            font-size: rem(24);
             margin: 0 0 rem(20) 0;
           }
         }
