--- a/src/styles/news.scss
+++ b/src/styles/news.scss
@@ -4,7 +4,7 @@ body {
   background: #f1f1f1;
 }
 
-.articles-hero {
+.news-hero {
   background-color: #f1f1f1;
   @include adaptiv-value("padding-top", 150, 115, 1);
   padding-bottom: 60px;
@@ -20,7 +20,7 @@ body {
   }
 
   &__title {
-    @include adaptiv-value("font-size", 56, 30, 1);
+    @include adaptiv-value("font-size", 72, 30, 1);
     line-height: 130%;
     color: #0e0e0e;
     text-transform: uppercase;
@@ -33,8 +33,10 @@ body {
 
   .bottom {
     display: flex;
-    align-items: flex-end;
+    align-items: flex-start;
+    justify-content: flex-end;
     gap: rem(16);
+    margin-top: -40px;
     @media (max-width: rem(992)) {
       flex-direction: column;
       align-items: flex-start;
@@ -50,7 +52,7 @@ body {
     }
     svg {
       max-width: rem(150);
-      margin-bottom: 8px;
+      margin-top: rem(10);
       display: block;
       @media (max-width: 1299px) {
         display: none;
@@ -111,7 +113,7 @@ body {
   }
 }
 
-.articles-second {
+.news-second {
   .img-01 {
     margin-top: rem(70);
     display: block;
@@ -138,7 +140,7 @@ body {
   }
 }
 
-.articles-wrap {
+.news-wrap {
   margin: rem(180) 0;
   @media (max-width: rem(992)) {
     margin: rem(100) 0;
@@ -274,32 +276,52 @@ body {
     }
     .top {
       display: flex;
-      gap: rem(30);
-      margin-bottom: rem(90);
+      gap: rem(40);
+      align-items: flex-start;
+      margin-bottom: 0;
       @media (max-width: rem(992)) {
         flex-direction: column;
         gap: rem(30);
-        margin-bottom: rem(40);
       }
-      img {
-        width: rem(100);
-        height: rem(100);
+      .col-01 {
+        width: calc(50% - 20px);
         @media (max-width: rem(992)) {
-          width: rem(70);
-          height: rem(70);
+          width: 100%;
+        }
+        h1 {
+          color: #0e0e0e;
+          margin: 0 0 rem(40) 0;
+          font-size: rem(48);
+          font-weight: 500;
+          line-height: 1.2;
+          text-align: left;
+          text-transform: uppercase;
+          @media (max-width: rem(992)) {
+            font-size: rem(28);
+            margin: 0 0 rem(20) 0;
+          }
+        }
+        .client {
+          margin-bottom: rem(20);
+        }
+        .client,
+        .challenge {
+          color: #0e0e0e;
+          font-size: rem(18);
+          font-weight: 300;
+          line-height: 1.2;
+          text-align: left;
+          span {
+            font-style: italic;
+            color: #134cb2;
+          }
         }
       }
-      h1 {
-        color: #0e0e0e;
-        margin: 0;
-        font-size: rem(48);
-        font-weight: 500;
-        line-height: 1.2;
-        text-align: left;
-        text-transform: uppercase;
-        width: calc(100% - rem(130));
+      img {
+        border-radius: 15px;
+        width: calc(50% - 20px);
+        height: auto;
         @media (max-width: rem(992)) {
-          font-size: rem(28);
           width: 100%;
         }
       }
@@ -311,29 +333,11 @@ body {
     }
     .content {
       margin-top: rem(40);
-
-      .introduction {
-        margin-bottom: rem(45);
-        padding-bottom: rem(45);
-        border-bottom: 1px solid #134cb2;
-        p {
-          margin: 0;
-        }
-      }
-      .conclusion {
-        margin-top: rem(45);
-        padding-top: rem(45);
-        border-top: 1px solid #134cb2;
-        p {
-          margin: 0;
-        }
-      }
-
       h2 {
-        color: #0e0e0e;
-        margin: rem(60) 0 rem(20) 0;
-        font-size: rem(36);
-        font-weight: 500;
+        color: #134cb2;
+        margin: rem(60) 0 rem(30) 0;
+        font-size: rem(32);
+        font-weight: 600;
         line-height: 1.2;
         text-align: left;
         @media (max-width: rem(992)) {
@@ -390,11 +394,30 @@ body {
           }
         }
       }
+      ol {
+        margin: 0 0 rem(20) 0;
+        padding: 0 0 0 rem(24);
+        li {
+          color: #0e0e0e;
+          font-size: rem(22);
+          font-weight: 600;
+          line-height: 1.2;
+          text-align: left;
+          margin: 0 0 rem(12) 0;
+          position: relative;
+          &:last-child {
+            margin: 0;
+          }
+          @media (max-width: rem(992)) {
+            font-size: rem(16);
+          }
+        }
+      }
     }
   }
 }
 
-.articles-cta {
+.cases-cta {
   background: #082860;
   padding: rem(90) 0;
   &__body {
