--- a/src/styles/what-we-do.scss
+++ b/src/styles/what-we-do.scss
@@ -652,7 +652,7 @@
         overflow: visible !important;
     }
     .swiper-pagination {
-        @media(min-width: 992px) { 
+        @media (min-width: 992px) {
             display: none;
         }
         position: relative;
@@ -689,30 +689,29 @@
     &__item {
         height: auto !important;
         min-width: 336px;
-        @media(max-width: 992px) { 
+        @media (max-width: 992px) {
             min-width: auto;
         }
     }
 
-    &__wrapper { 
+    &__wrapper {
         background-color: #ffffff;
         padding: 50px 20px 30px 20px;
         border-radius: 15px;
         height: 100%;
-        
     }
 
     &__title {
         text-align: center;
         font-weight: 500;
-        color: #0E0E0E;
+        color: #0e0e0e;
         font-size: 18px;
         line-height: normal;
         position: relative;
         margin: 0 0 15px 0;
 
-        &::before { 
-            content: '';
+        &::before {
+            content: "";
             position: absolute;
             top: -29px;
             left: 50%;
@@ -724,10 +723,166 @@
         }
     }
 
-    &__text { 
+    &__text {
         font-size: 16px;
         line-height: normal;
         text-align: center;
         font-weight: 300;
+    }
+}
+
+.what-approach {
+    @include adaptiv-value("padding-top", 90, 40, 1);
+    @include adaptiv-value("padding-bottom", 75, 65, 1);
+    &__container {
+    }
+
+    &__body {
+    }
+
+    &__title {
+        @include adaptiv-value("font-size", 32, 30, 1);
+        line-height: normal;
+        font-weight: 500;
+        color: #0e0e0e;
+    }
+
+    &__text {
+        @include adaptiv-value("margin-top", 40, 30, 1);
+        @include adaptiv-value("font-size", 20, 16, 1);
+        line-height: normal;
+    }
+
+    &__tabs {
+        @include adaptiv-value("margin-top", 75, 38, 1);
+        background-color: #f1f1f1;
+        padding: 35px 45px;
+        border-radius: 15px;
+
+        @media (max-width: 992px) {
+            padding: 20px 0;
+        }
+    }
+}
+
+.tabs-approach {
+    display: flex;
+    @include adaptiv-value("gap", 60, 0, 1);
+    &__nav {
+        min-width: 296px;
+        width: 296px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        row-gap: 15px;
+    }
+
+    &__content {
+    }
+
+    &__button {
+        padding: 16px 20px;
+        border-bottom: 1px solid #939796;
+        transition: all 0.3s ease 0s;
+        color: #8b8b8b;
+        font-weight: 500;
+        font-size: 22px;
+        line-height: normal;
+        display: flex;
+        width: 100%;
+
+        &.active {
+            border-color: #0e0e0e;
+            color: #134cb2;
+        }
+    }
+
+    &__tab {
+    }
+
+    &__btn {
+        @media (min-width: 992px) {
+            display: none;
+        }
+
+        padding: 16px 20px;
+        border-bottom: 1px solid #939796;
+        transition: all 0.3s ease 0s;
+        color: #8b8b8b;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: normal;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+
+        &._open {
+            border-color: #0e0e0e;
+            color: #134cb2;
+        }
+    }
+
+    &__content {
+        .wrapper {
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            gap: 35px;
+            padding: 20px 0 0 0;
+            @media(max-width: 992px) { 
+                flex-direction: column;
+            }
+            .col-01 {
+                width: 50%;
+                @media (max-width: 992px) {
+                    width: 100%;
+                    padding: 0 13px;
+                }
+                .list {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 15px;
+                    .item {
+                        padding: 0 0 0 15px;
+                        position: relative;
+                        color: #0E0E0E;
+                        font-size: 18px;
+                        line-height: normal;
+
+                        span { 
+                            font-weight: 600;
+                        }
+                        &::before {
+                            content: "";
+                            position: absolute;
+                            top: 8px;
+                            left: 0;
+                            width: 5px;
+                            height: 5px;
+                            border-radius: 100px;
+                            background-color: #0E0E0E;
+                        }
+                    }
+                }
+            }
+
+            .col-02 {
+                width: 50%;
+                @media (max-width: 992px) {
+                    width: 100%;
+                    padding: 0 0 30px 0;
+                }
+                img {
+                    border-radius: 15px;
+                    object-fit: cover;
+                    width: 100%;
+
+                    @media(max-width: 992px) { 
+                        min-height: 192px;
+                    }
+                }
+            }
+        }
     }
 }
