--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -7,6 +7,7 @@
   width: 100%;
   z-index: 30;
   padding: 17px 0;
+  border-bottom: 1px solid #134CB280;
   &__container {
   }
 
@@ -21,6 +22,7 @@
     font-size: 38px;
     line-height: normal;
     color: #0e0e0e;
+    display: flex;
   }
 
   &__col-01 {
