--- a/src/styles/account.scss
+++ b/src/styles/account.scss
@@ -208,20 +208,24 @@
           }
           thead {
             th {
-              padding: rem(20) 0 rem(20) rem(10);
+              padding: rem(20) 0 rem(7) rem(10);
               border-radius: 0;
-              font-size: rem(20);
+              font-size: rem(16);
               font-weight: 300;
               line-height: 1.2;
               text-align: center;
-              width: rem(110);
-              color: #fff;
+              width: rem(100);
+              color: #0e0e0e;
               white-space: nowrap;
-              background: #134cb2;
+              background: transparent;
               &:first-child {
                 text-align: left;
-                padding-left: rem(35);
+                padding-left: rem(8);
                 border-radius: rem(15) 0 0 rem(15);
+                width: 5%;
+              }
+              &:nth-child(2){
+                width: 15%;
               }
               &:nth-child(3) {
                 text-align: left;
@@ -239,28 +243,46 @@
               }
             }
             td {
-              margin: rem(7) 0;
-              padding: rem(20) 0 rem(20) rem(10);
-              border-radius: 0;
-              font-size: rem(20);
-              font-weight: 300;
-              line-height: 1.2;
-              text-align: center;
-              color: #333;
-              white-space: nowrap;
-              vertical-align: baseline;
-              background: #fff;
+              padding: rem(7) 0 rem(7) rem(0);
+
+              span {
+                display: block;
+                border-radius: 0;
+                padding: rem(20) 0 rem(20) rem(10);
+                height: inherit;
+                font-size: rem(16);
+                font-weight: 400;
+                line-height: 1.2;
+                text-align: center;
+                color: #333;
+                white-space: nowrap;
+                vertical-align: baseline;
+                background: #fff;
+              }
               &:first-child {
-                text-align: left;
-                padding-left: rem(35);
-                border-radius: rem(15) 0 0 rem(15);
+                width: rem(50);
+                span {
+                  text-align: left;
+                  padding-left: rem(35);
+                  border-radius: rem(15) 0 0 rem(15);
+                }
               }
               &:nth-child(3) {
-                text-align: left;
+                span {
+                  text-align: left;
+                }
               }
               &:last-child {
-                padding-right: rem(35);
-                border-radius: 0 rem(15) rem(15) 0;
+                span {
+                  padding: rem(15) rem(35) rem(15) rem(10);
+                  border-radius: 0 rem(15) rem(15) 0;
+                }
+              }
+              img{
+                &.inactive{
+                  filter:grayscale(1);
+                  opacity: 0.3;
+                }
               }
             }
           }
